--- a/templates/interviews/detail.html
+++ b/templates/interviews/detail.html
@@ -26,8 +26,8 @@
         </div>
         {% if q.question_type == 'multiple_choice' %}
           <ul class="list-disc list-inside mt-2 text-gray-800">
-            {% for opt in q.options.all %}
-            <li>{{ opt.option_text }}</li>
+            {% for opt in q.options %}
+            <li>{{ opt }}</li>
             {% empty %}
             <li class="text-gray-500">No options added</li>
             {% endfor %}
