--- a/templates/interviews/response_detail.html
+++ b/templates/interviews/response_detail.html
@@ -64,9 +64,9 @@
   </div>
   {% endif %}
 
-  <div>
-    <a href="{% url 'interviews:detail' response.interview.pk %}" class="btn btn-outline">
-      <i class="fas fa-arrow-left mr-2"></i>Back to interview
+  <div class="mt-4">
+    <a href="{% url 'home' %}" class="btn btn-primary">
+      <i class="fas fa-home mr-2"></i>Go to Home
     </a>
   </div>
 </div>
